--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
-h4{
-    color: coral;
+
+.b1{
+    background-color: rgb(119, 198, 119);
+    border-radius: 7px;
+    padding: 5px 15px;
+    border-color: aliceblue;
+    border: none;
+}
+#b2{
+    color: rgb(0, 0, 0);
+    text-transform: uppercase;
+    height: 30px;
+    width: 150px;
+    border: 2px solid black;
+    border-radius: 6px;
+    text-align: center;
 }
